--- a/Amazon Clone/index.html
+++ b/Amazon Clone/index.html
@@ -120,7 +120,21 @@
             <span>Roll over image to zoom in</span>
         </div>
         <div class="main__info"></div>
-        <div class="main__sidebar"></div>
+        <div class="main__sidebar">
+            <div class="main__sidebar__top">
+                <h2 class="main__sidebar__total">
+                    ILS 142.81
+                </h2>
+                <span>
+                    + No Import Fees Deposit & ILS 77.25 Shipping to Israel
+                </span>
+                <span>Details</span> 
+                <span>Arrives: <b>Feb 26 - March 3</b></span>
+                <span>In Stock.</span>
+                <button class="main__sidebar__total_button-1">Add to Cart</button>
+                <button>Buy Now</button>
+            </div>
+        </div>
         <div class="main__bought-together">
             <h2>Frequently bought together</h2>
             <div class="main__bought-together-middle">
@@ -164,14 +178,12 @@
                     <div class="main__blank_roller-item">
                         <img src="./image/10.jpg">
                     </div>
-                    <div class="main__blank_roller-item">
-                        <img src="./image/10.jpg">
-                    </div>
                 </div>
                 <button>></button>
             </div>
         </div>
         <div class="main__blank_spcae_right"></div>
     </main>
+    <div class="black-down"></div>
 </body>
 </html>
