Memory Game Submission

--- a/Memory Game/ index.html
+++ b/Memory Game/ index.html
@@ -18,6 +18,9 @@
                 <span>Flips:</span>
                 <span class="flips">0</span>
             </div>
+            <div>
+                <button class="new-game container">New Game</button>
+            </div>
         </div>
         <div class="game-section container">
             <div class="card" index="0"></div>
@@ -34,7 +37,10 @@
             <div class="card" index="11"></div>
         </div>
     </div>
-    
+    <div class="play-again display-none">
+        <h1>You won!</h1>
+        <button class="play-again__button container">Play Again</button>
+    </div>
     
 
     <script src="./script/index.js"></script>
