--- a/To Do Lists/index.html
+++ b/To Do Lists/index.html
@@ -4,25 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/4a7733dbd8.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/index.css">
     <title>To Do List</title>
 </head>
 <body>
-    <div class="flex">
+    <div class="wrapper">
+        <header>To Do List</header>
         <div class="new-item-section">
-            <input type="text" class="new-item-section__input">
-            <button class="new-item-section__button">Submit</button>
+            <input type="text" placeholder="Add your new todo">
+            <button><i class="fas fa-plus"></i></button>
         </div>
-        <div class="list-section">
-            <div class="ol">
-                <li>
-                    <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
-                    <label for="vehicle1">Take out the dog !</label>
-                    <button>Remove</button>
-                    <button>Update</button>
-                </li>
-            </div>
-        </div>
+        <ol class="list-section">
+        </ol>
+        <div class="footer">
+            <span class="footer_total__tasks">You have 0 pending tasks</span>
+            <button class="footer__clear_all">Clear All</button>
+        <div>
     </div>
+    <div class="update-section display-none">
+        <header>Edit Content</header>
+        <input type="text" placeholder="Add your new todo" class="update-section__input">
+        <button class="update-section__button">submit</button>
+    </div>
+
+    <script src="./script/List.js"></script>
+    <script src="./script/index.js"></script>
 </body>
 </html>
