To Do Lists Submission

--- a/To Do Lists/index.html
+++ b/To Do Lists/index.html
@@ -29,6 +29,7 @@
     </div>
 
     <script src="./script/List.js"></script>
+    <script src="./script/localStorge.js"></script>
     <script src="./script/index.js"></script>
 </body>
 </html>
